--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
           <li><a href="https://minal0p.github.io/IEEE-ET5/#board-members">Board Team</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5-Membership/">Membership</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5-Events/">Events</a></li>
-          <li><a href="https://minal0p.github.io/IEEE-ET5/#resources">Resources</a></li>
+          <li><a href="https://minal0p.github.io/IEEE-ET5-Resources/">Resources</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5-Ai/">AI Helper</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5/#contact-us">Contact Us</a></li>
         </ul>
@@ -668,7 +668,7 @@
           <li><a href="https://minal0p.github.io/IEEE-ET5/#board-members">Board Team</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5-Membership/">Membership</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5-Events/">Events</a></li>
-          <li><a href="https://minal0p.github.io/IEEE-ET5/#resources">Resources</a></li>
+          <li><a href="https://minal0p.github.io/IEEE-ET5-Resources/">Resources</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5-Ai/">AI Helper</a></li>
           <li><a href="https://minal0p.github.io/IEEE-ET5/#contact-us">Contact Us</a></li>
         </ul>
